scss/projects.scss
/******* PROJECT VIEW *********/
.project-wrapper {
  width: 70%;
  margin-left: 15%;
  //max-width: rem-calc(500px);
  //margin-left: auto;
  //margin-right: auto;

  .leader {
    margin-top: -1.0rem;
    margin-left: -4.8rem;
  }
  .project-title {
    margin-top: 1.3rem;
    font-size: $h2-font-size;
  }

  .project {
    .metadata-fat {
      -moz-box-sizing: content-box;
      padding-bottom: rem-calc(5px);
      border-bottom: 1px solid $gcl-lightgray;

      .actions {
        visibility: hidden;
        margin-right: rem-calc(10px);
      }

      &:hover {
        .actions {
          visibility: visible;
        }
      }
    }
  }
}

/******* PROJECT SUBMISSION FORM *******/
#project-form {
  input.title, textarea {
    // border: none;
    // border: 1px $gcl-midgray solid;
  }
  input.title {
    margin-bottom: 1rem;
  }
  textarea {
    height: 6.5rem;
  }
  @media #{$medium-up} {
    input.title {
      // width: 45%;
    }
    textarea {
      // width: 60%;
    }
  }

  .share-button {
    // float: right;
    font-size: rem-calc(15px);
    margin-top: rem-calc(15px);
  }

  div.buttons {
    a.button {
      vertical-align: top;
    }

    .upload-button {
      position: relative;
      overflow: hidden;
      display: inline-block;

      &:hover {
        a.button {
          background-color: black;
        }
      }
    }
    .upload-button input[type=file] {
      position: absolute;
      top: 0;
      right: 0;
      margin: 0;
      padding: 0;
      font-size: 20px;
      cursor: pointer;
      opacity: 0;
      filter: alpha(opacity=0);
    }
  }

}


h3.shared-by-others {
  text-transform: none;
  font-size: 1.4rem;
  margin-bottom: 1.5rem;
}

#project-list {
  max-width: rem-calc(650px);
}

.project-title {
  @extend %text-white-on-darkgray;
  margin-right: 0.5rem;
  text-transform: none;
  font-size: 1rem;
}

a:hover .project-title {
  color: black;
  background-color: $gcl-lightgray;
}

.project {
  margin-bottom: 1rem;

  h6.title {
    @extend .project-title;
  }

  div.content {
    margin-bottom: 1rem;

    p {
      font-size: 0.9rem;
      font-weight: 200;
    }

  }

  a.expand, a.collapse {
    float: right;
    position: relative;
    top: -0.5rem;
    // display: inline-block;
    font-size: rem-calc(12px);
    color: $gcl-red;
  }

  // override Foundation 5
  div.carousel {
    li {
      margin-right: 0;
    }
  }

  div.comments {
    margin-top: 2rem;
  }
  h3 + div.comments {
    margin-top: 0.8rem;
  }

  img.project-image {
    // max-width:  rem-calc(250px);
    // max-height: rem-calc(250px);
    width: 100%;
  }
  .user-bar {
    height: 3rem;
    line-height: 1.5rem;


    .profile-picture {
      float: left;
      display: inline-block;
      margin-right: 0.7rem;
      @include rounded(0.2rem);
      height: 3rem;
      // width: 1.8rem;
      background-color: $gcl-lightgray;
      color: white;
      font-size: 2rem;
    }
    .metadata {
      display: inline-block;
      .count {
        font-size: rem-calc(10px);
      }
    }
  }
}


.gcl-column2 {
  .masonry-gutter {
    width: 8.33%;
    // display: none;
    @media #{$large-up} {
      width: rem-calc(50px);
    }
  }
 .project-column {
    width: 100%;

    @media #{$medium-up} {
      width: 45.833%;
    }
    @media #{$large-up} {
      width: rem-calc(300px);
    }
  }
}


.project-column {
  margin-bottom: rem-calc(20px);
  width: 100%;
  border-bottom: 1px solid $gcl-lightgray;

  a:hover .project-title {
    background-color: $gcl-red;
    color: white;
  }

  .project-title { // this is a <h6>
    display: block;
    margin-bottom: 0;
    margin-right: 0;
    padding-top: rem-calc(3px);
    padding-bottom: rem-calc(3px);
    padding-left: rem-calc(5px);
  }

  .columns {
    padding: 0;
  }

  hr {
    margin: 0;
  }

  div.content {
    margin-top: rem-calc(20px);
    margin-bottom: rem-calc(20px);

    p {
      font-size: rem-calc(13px);
      margin-bottom: 0;
    }
  }

  .metadata-fat {
    margin-top: 0;
    margin-bottom: rem-calc(20px);
  }

  .trainingbit-name {
    @extend %text-white-on-red;
    float: right;
    display: inline-block;
  }
}

